2006-03-26 [colin]	2.0.0cvs170

	* src/summaryview.c
		I think I killed the twilight zone bug!
		summary_select_node() flushes GTK events in order
		to be able to center the view. But this also 
		flushes keypresses like Ctrl-Alt-U, so this can
		call summary_show from summary_select_node (itself
		called from summary_show, etc.). And the summaryview
		has to be unlocked in this function. So just locking
		while processing GTK events, and bailing if locked, 
		should fix it.
		Fixes bug #927 (SIGSEGV during Update Summary)

2006-03-25 [colin]	2.0.0cvs169

	* src/matcher.c
		Fix search in QP-encoded bodies
		Fix utf-8 searches in bodies encoded in the
		locale's encoding
	* src/common/quoted-printable.c
	* src/common/quoted-printable.h
		Add a decode function that doesn't overwrite
		the original pointer
		

2006-03-24 [colin]	2.0.0cvs168

	* src/action.c
	* src/summaryview.c
	* src/summaryview.h
		Update message cache after action
		Patch by H. Merijn Brand
	* src/prefs_msg_colors.c
		Factorize label 
		Patch by Fabien Vantard
	* src/plugins/spamassassin/spamassassin_gtk.c
		Remove useless translation
		Patch by Fabien Vantard

2006-03-23 [colin]	2.0.0cvs167

	* src/common/ssl.c
		Let 30 seconds to SSL_connect

2006-03-23 [wwp]	2.0.0cvs166

	* src/summaryview.c
	* src/gtk/description_window.c
		fix display of From/To column title when in appropriate folders (queue/sent/drafts)
		and headers are translated; adjust description windows' width to fit their
		contents. Patches by Pawel Pekala <c0rn@o2.pl>.

2006-03-23 [paul]	2.0.0cvs165

	* src/common/utils.c
		fix highlighting of URIs containing "()"
		(2.0.0cvs164's reversal fixed)
		Thanks to Colin.

2006-03-23 [paul]	2.0.0cvs164

	* src/common/utils.c
		revert patch, (postponing a fix), at 2.0.0cvs120
		as it breaks more URIs than it fixes.
		Allow '-' to be a terminating character in a URI

2006-03-22 [colin]	2.0.0cvs163

	* configure.ac
		Require libetpan 0.45